Crash on Undo from Sculpt mode to Edit mode #81268

Closed
opened 2020-09-28 22:50:46 +02:00 by Mike · 4 comments

System Information
Operating system: Windows-7-6.1.7601-SP1 64 Bits
Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19

Blender Version
Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-26 20:04, hash: 8c81b3fb8b
Worked: 2.90.1

Short description of error
Crash when undoing from Sculpt mode back to Edit mode.

Still crashes when Legacy Undo is enabled.

Works fine in 2.90.1

Stack trace:

blender.exe         :0x000000013F991130  pbvh_has_mask
blender.exe         :0x000000013FBA3950  OVERLAY_sculpt_cache_populate
blender.exe         :0x000000013FB6AC60  OVERLAY_cache_populate
blender.exe         :0x000000013FB32360  drw_engines_cache_populate
blender.exe         :0x000000013FB2EE60  DRW_draw_render_loop_ex
blender.exe         :0x000000013FB2FE90  DRW_draw_view
blender.exe         :0x00000001401684F0  view3d_main_region_draw
blender.exe         :0x000000013FD7A5F0  ED_region_do_draw
blender.exe         :0x000000013FA65960  wm_draw_window_offscreen
blender.exe         :0x000000013FA657B0  wm_draw_window
blender.exe         :0x000000013FA652B0  wm_draw_update
blender.exe         :0x000000013FA428A0  WM_main
blender.exe         :0x000000013F7C9650  main
blender.exe         :0x0000000143B10648  __scrt_common_main_seh
kernel32.dll        :0x00000000778A6520  BaseThreadInitThunk
ntdll.dll           :0x0000000077ADC520  RtlUserThreadStart

Exact steps for others to reproduce the error
1. Add Suzanne The Monkey
2. Switch to Edit mode
3. Switch to Sculpt mode
4. Undo
5. Crash

{F8933191, size=full}

**System Information** Operating system: Windows-7-6.1.7601-SP1 64 Bits Graphics card: GeForce GTX 650/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 442.19 **Blender Version** Broken: version: 2.91.0 Alpha, branch: master, commit date: 2020-09-26 20:04, hash: `8c81b3fb8b` Worked: 2.90.1 **Short description of error** Crash when undoing from Sculpt mode back to Edit mode. Still crashes when Legacy Undo is enabled. Works fine in 2.90.1 **Stack trace:** ``` blender.exe :0x000000013F991130 pbvh_has_mask blender.exe :0x000000013FBA3950 OVERLAY_sculpt_cache_populate blender.exe :0x000000013FB6AC60 OVERLAY_cache_populate blender.exe :0x000000013FB32360 drw_engines_cache_populate blender.exe :0x000000013FB2EE60 DRW_draw_render_loop_ex blender.exe :0x000000013FB2FE90 DRW_draw_view blender.exe :0x00000001401684F0 view3d_main_region_draw blender.exe :0x000000013FD7A5F0 ED_region_do_draw blender.exe :0x000000013FA65960 wm_draw_window_offscreen blender.exe :0x000000013FA657B0 wm_draw_window blender.exe :0x000000013FA652B0 wm_draw_update blender.exe :0x000000013FA428A0 WM_main blender.exe :0x000000013F7C9650 main blender.exe :0x0000000143B10648 __scrt_common_main_seh kernel32.dll :0x00000000778A6520 BaseThreadInitThunk ntdll.dll :0x0000000077ADC520 RtlUserThreadStart ``` **Exact steps for others to reproduce the error** **1.** Add Suzanne The Monkey **2.** Switch to Edit mode **3.** Switch to Sculpt mode **4.** Undo **5.** Crash {[F8933191](https://archive.blender.org/developer/F8933191/Crash.mp4), size=full}
Author

Added subscriber: @demmordor

Added subscriber: @demmordor
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'

This issue was referenced by e41437b16e

This issue was referenced by e41437b16e6deda9fdc23ffd4baeaf912dc7052f
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Pablo Dobarro self-assigned this 2020-10-01 19:18:58 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#81268
No description provided.